--- a/src/components/SingleAuthorName/SingleAuthor.css
+++ b/src/components/SingleAuthorName/SingleAuthor.css
@@ -1,5 +1,5 @@
 .single-author {
-  border: 1px solid gray;
+  border: 1px solid lightgray;
   border-radius: 10px;
   background-color: #f8eed0;
 }
